refactor: remove TrackModal component and replace with FullScreenDialog for track display
style: update App.vue to remove SCSS styles and adjust layout

style: modify html-reset.scss to hide scrollbars and clean up styles

style: adjust index.scss to use new CSS variables for width and height

fix: change root element creation in root.ts to append a new div to the body

fix: update DevicePage, ImportPage, SelectorPage, SvgPage, _404Page, HomePage, and SnapshotPage to use page-size class for consistent layout

chore: upgrade UnoCSS preset from Wind3 to Wind4

chore: remove build target from vite.config.ts

feat: add FullScreenDialog component for improved modal handling

style: create var.scss for CSS variables to manage responsive dimensions

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,12 +1,10 @@
+@use './var.scss';
 @use './html-reset.scss';
 @use './atom.scss';
 
-$winMinWidth: 1200px;
-$winMinHeight: 700px;
-
-:root {
-  --gkd-w: max(#{$winMinWidth}, 100vw);
-  --gkd-h: max(#{$winMinHeight}, 100vh);
+html {
+  width: var(--win-w);
+  height: var(--win-h);
 }
 
 body {
@@ -14,4 +12,10 @@ body {
   &.body-auto-w {
     --gkd-w: 100vw;
   }
+}
+
+.page-size,
+[page-size] {
+  width: var(--gkd-w);
+  height: var(--gkd-h);
 }
