--- a/src/style/html-reset.scss
+++ b/src/style/html-reset.scss
@@ -1,4 +1,3 @@
-// 移除 inline 元素的空白间隙
 img,
 svg,
 video,
@@ -14,13 +13,6 @@ a {
   color: inherit;
 }
 
-* {
-  /* 禁止 iOS/Edge 滚动回弹效果 */
-  overscroll-behavior: none;
-}
-
-html,
-body {
-  font-size: 14px;
-  line-height: 20px;
+*::-webkit-scrollbar {
+  display: none;
 }
